--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 				<ul class="header__menu">
 					<li><a href="#main" class="header__link">Главная</a></li>
 					<li><a href="#about" class="header__link">Обо мне</a></li>
-					<li><a href="#products" class="header__link">Разделы</a></li>
-					<li><a href="#products" class="header__link">Сертификаты</a></li>
-					<li><a href="#order" class="header__link">Контакты</a></li>
+					<li><a href="#portfolio" class="header__link">Портфолио</a></li>
+					<li><a href="#sections" class="header__link">Направления работы</a></li>
+					<li><a href="#contacts" class="header__link">Контакты</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 </header>
 		<div class="content">
-			<div class="main">
+			<div id="main" class="main">
 				<div class="container">
 					<div class="main__wrap">
 						<div class="main__wrapper">
@@ -40,48 +40,429 @@
 								</div>
 							</div>
 							<div class="main__column">
-								<div class="main__title">
-									Чтобы учить других-учись САМ,
-									Чтобы воспитывать других- начинай с СЕБЯ, чтобы развивать других-ПОСТОЯННО РАЗВИВАЙСЯ САМ!
+								<div class="main__body">
+									<div class="main__label"> <span>"</span> Чтобы учить других-учись САМ,
+										чтобы воспитывать других- начинай с СЕБЯ, чтобы развивать других-ПОСТОЯННО
+										РАЗВИВАЙСЯ САМ! <span>"</span>
+									</div>
 								</div>
+							</div>
+						</div>
+						<div class="main__intro intro">
+							<div class="intro__title">
+								Добро пожаловать!
+							</div>
+							<div class="intro__text">
+								<p>Вы зашли на персональный сайт учителя-дефектолога <span>Балахонцевой Яны
+										Евгеньевны</span>.</p>
+								<p>Мне очень приятно видеть Вас на этой странице!
+									Надеюсь информация представленая на сайте будет интересной и полезной!</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="intro">
-				<div class="container">
-					<div class="intro__body">
-						<div class="intro__title">
-							Добро пожаловать!
-						</div>
-						<div class="intro__text">
-							<p>Вы зашли на персональный сайт учителя-дефектолога <span>Балахонцевой Яны Евгеньевны</span>.
-								Мне очень приятно видеть Вас на этой странице!
-								Надеюсь информация представленая на сайте будет интересной и полезной!</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="about">
+			<div id="about" class="about">
 				<div class="container">
 					<div class="about__title title">
 						Обо мне
 					</div>
 					<div class="about__body">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae enim voluptas distinctio est earum vero
-						at laudantium nobis sed magnam consectetur temporibus non necessitatibus dolor beatae maiores,
-						sapiente doloribus explicabo deleniti. Hic quos eaque cupiditate doloribus sunt! Perspiciatis
-						voluptates labore, reprehenderit unde modi, alias nostrum commodi dolorum ullam eum quod quia quaerat
-						sunt fugit nam dicta molestias earum mollitia sapiente accusamus excepturi at minus quas blanditiis.
-						Possimus, ipsam. Dolores necessitatibus consequuntur id ut est cumque aspernatur earum, laudantium in.
-						Quis sapiente ipsum sequi officiis, ducimus ipsa? Odit optio quae reiciendis, vitae, ut eveniet
-						excepturi aperiam voluptates aut fuga quaerat et.
+						<div class="about__label">
+							По специальности я учитель — дефектолог. По мнению моих учеников — тетя, которая умеет интересно
+							играть. По версии родителей, я тот специалист, который умеет увлечь и получить результат.
+						</div>
+						<div class="about__points">
+							<div class="about__point">
+								Образование:
+							</div>
+							<div class="about__items">
+								<p class="about__item">1. Федеральное государственное бюджетное образовательное учреждение
+									высшего образования
+									«Тихоокеанский государственный университет» г. Хабаровск по направлению специальное
+									(дефектологическое) образование, специальный психолог. (высшее педагогическое 2018 год)
+								</p>
+								<p class="about__item">2. Олигофренопедагогика (профессиональная переподготовка)</p>
+								<p class="about__item">3. Педагог дополнительного образования (профессиональная переподготовка)
+								</p>
+								<p class="about__item">4. Этапы, услуги и процедуры ранней помощи.</p>
+							</div>
+							<div class="about__point">
+								Опыт:
+							</div>
+							<div class="about__items">
+								<p class="about__item">С 2013 года – учитель-дефектолог в Краевом государственном казенном
+									общеобразовательном
+									учреждении, реализующем адаптированные основные общеобразовательные программы
+									«Школа-интернат
+									№ 10»</p>
+							</div>
+							<div class="about__point">
+								Повышение квалификации:
+							</div>
+							<div class="about__items">
+								<p class="about__item">1. Деятельность тьютора в соответствии с новыми ФГОС, ПООП и концепциями
+									модернизации
+									учебных
+									предметов, в том числе, по адаптированным образовательным программам для обучающихся с
+									ОВЗ.
+								</p>
+								<p class="about__item">2. Проектирование образовательного пространства УДОД в условиях введения
+									ФГОС общего
+									образования.</p>
+								<p class="about__item">3. Современные подходы и технологии организации пространства
+									жизнедеятельности детей сирот
+									и
+									детей, оставшихся без попечения родителей в условиях детского дома и замещающей семьи.</p>
+								<p class="about__item">4. Распространение на всей территории РФ современных моделей успешной
+									социализации детей в
+									условиях экспериментального перехода на ФГОС ОВЗ.</p>
+								<p class="about__item">5. Курсы оказания первой помощи (ежегодно)</p>
+								<p class="about__item">6. «Информационно-коммуникационные технологии в профессиональной
+									деятельности
+									педагогического
+									работника»</p>
+								<p class="about__item">7. Повышение профессиональной компетентности педагога по вопросу
+									реализации
+									ФГОС
+									образования
+									обучающихся с УО(ИН).</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="portfolio" class="portfolio">
+				<div class="container">
+					<div class="portfolio__title title">Портфолио</div>
+					<div class="portfolio__label">
+						<p>Я нахожусь в постоянном самосовершенствовании)</p>
+						<p>Доказательство этому - мои сертификаты и дипломы:</p>
+					</div>
+				</div>
+				<div class="portfolio__slider">
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/01.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/02.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/03.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/04.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/05.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/06.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/07.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/08.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img class="port" src="img/certificates/09.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/10.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/11.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/12.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/13.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/14.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/15.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/16.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/17.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/18.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/19.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/20.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/21.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/22.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/23.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/24.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/25.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/26.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/27.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/28.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/29.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/30.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image portfolio__image_ex">
+								<img src="img/certificates/31.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/32.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/34.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/35.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/36.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/37.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/38.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/39.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/40.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/41.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/42.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="portfolio__slide">
+						<div class="portfolio__body">
+							<div class="portfolio__image">
+								<img src="img/certificates/43.jpg" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="sections" class="sections">
+				<div class="container">
+					<div class="sections__title title">
+						Направления работы
+					</div>
+					<div class="sections__label">
+						Ознакомьтесь с необходимым направлением, перейдя по нужной ссылке:
+					</div>
+					<div class="sections__body">
+						<div class="sections__column">
+							<div class="sections__section"><a href="" class="sections__text">Консультативно-просветительское
+									направление</a></div>
+							<div class="sections__section"><a href="" class="sections__text">Коррекционно-развивающее
+									направление</a></div>
+						</div>
+						<div class="sections__column">
+							<div class="sections__section"><a href="" class="sections__text">Диагностико-аналитическое
+									направление</a></div>
+							<div class="sections__section"><a href="" class="sections__text">Нормативно-правовая база</a></div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<footer class="footer">
+	</div>
+	<footer class="footer">
 	<div class="container">
 		<div class="footer__wrapper">
 		</div>
