--- a/diagnost.html
+++ b/diagnost.html
@@ -23,6 +23,7 @@
 							<li><a href="index.html#about" class="header__link">Обо мне</a></li>
 							<li><a href="index.html#portfolio" class="header__link">Портфолио</a></li>
 							<li><a href="index.html#sections" class="header__link">Направления работы</a></li>
+							<li><a href="index.html#profession" class="header__link">Профессия</a></li>
 							<li><a href="index.html#contacts" class="header__link">Контакты</a></li>
 						</ul>
 					</div>
@@ -61,6 +62,8 @@
 			</div>
 		</div>
 	</div>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
