--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<li><a href="#about" class="header__link">Обо мне</a></li>
 					<li><a href="#portfolio" class="header__link">Портфолио</a></li>
 					<li><a href="#sections" class="header__link">Направления работы</a></li>
+					<li><a href="#profession" class="header__link">Профессия</a></li>
 					<li><a href="#contacts" class="header__link">Контакты</a></li>
 				</ul>
 			</div>
@@ -464,7 +465,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="profession">
+			<div id="profession" class="profession">
 				<div class="container">
 					<div class="profession__title title">Профессия дефектолог</div>
 					<div class="profession__wrap">
