--- a/consult.html
+++ b/consult.html
@@ -55,6 +55,33 @@
 							с индивидуально-типологическими особенностями детей, состоянием их соматического и психического
 							здоровья, подготовка и включение родителей в коррекционно-образовательный процесс.
 						</div>
+						<div class="direction__sublabel">
+							<span>Семинар</span> "Дифференцированный подход: учет особых образовательных потребностей
+							обучающихся с РАС"
+						</div>
+						<div class="dircetion__slider direction-slider">
+							<div class="direction-slider__slide">
+								<div class="direction-slider__body">
+									<div class="direction-slider__image">
+										<img src="img/direction/01.jpg" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="direction-slider__slide">
+								<div class="direction-slider__body">
+									<div class="direction-slider__image">
+										<img src="img/direction/02.jpg" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="direction-slider__slide">
+								<div class="direction-slider__body">
+									<div class="direction-slider__image direction-slider__image_ex">
+										<img src="img/direction/03.jpg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
 						<div class="direction__item">
 							<div class="direction__label">
 								Подробную информацию о данном направлении вы можете узнать, перейдя по <a
