--- a/correct.html
+++ b/correct.html
@@ -51,7 +51,12 @@
 							преодоление разрыва между обучением и развитием в процессе реализации комплексных программ в
 							условиях взаимодействия участников коррекционно-образовательного процесса.
 						</div>
-						<div class="direction__item">
+						<video controls width="600px" height="400px" class="direction__video">
+							<source src="video/01.mp4" type="video/mp4">
+							<source src="video/01.webm" type="video/webm">
+							<source src="video/01.ogv" type="video/ogg">
+						</video>
+						<div class="direction__item direction__item_cor">
 							<div class="direction__label">
 								Подробную информацию о данном направлении вы можете узнать, перейдя по <a
 									href="https://disk.yandex.ru/client/disk/%D0%9A%D0%BE%D1%80%D1%80%D0%B5%D0%BA%D1%86%D0%B8%D0%BE%D0%BD%D0%BD%D0%BE-%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D0%B2%D0%B0%D1%8E%D1%89%D0%B5%D0%B5%20%D0%BD%D0%B0%D0%BF%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5">ссылке</a>
