--- a/diagnost.html
+++ b/diagnost.html
@@ -46,10 +46,10 @@
 						<div class="direction__title title">
 							Диагностико-аналитическое направление
 						</div>
-						<div class="direction__text">
-							<span>lorem ipsum:</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam aperiam
-							iste necessitatibus accusamus quia architecto aut est harum saepe nemo, natus consequuntur, facilis
-							reprehenderit qui aspernatur ullam neque non veniam!
+						<div class="direction__image">
+							<div class="direction__img">
+								<img src="img/direction/05.jpg" alt="">
+							</div>
 						</div>
 						<div class="direction__item">
 							<div class="direction__label">
