--- a/index.html
+++ b/index.html
@@ -548,9 +548,154 @@
 					</div>
 				</div>
 			</div>
+			<div id="parents" class="parents">
+				<div class="container">
+					<div class="parents__title title">Родителям</div>
+					<div class="parents__body">
+						<div class="parents__subtitle">
+							<p>Здесь вы можете ознакомиться с лучшими развивающими ресурсами!</p>
+						</div>
+						<div class="parents__wrapper">
+							<div class="parents__column">
+								<div class="parents__item">
+									<a href="https://xn--80aidamjr3akke.xn--p1ai/">Растим детей</a>
+								</div>
+								<div class="parents__item">
+									<a href="https://interneturok.ru/">Библиотека видеоуроков по школьной
+										программе</a>
+								</div>
+								<div class="parents__item">
+									<a href="https://www.igraemsa.ru/">Развивающие игры</a>
+								</div>
+								<div class="parents__item">
+									<a href="https://chudo-udo.info/">Развивающий портал</a>
+								</div>
+							</div>
+							<div class="parents__column">
+								<div class="parents__item">
+									<a href="http://www.razvitierebenka.com/">Развитие ребенка</a>
+								</div>
+								<div class="parents__item">
+									<a href="http://razvitiedetei.info/">Развитие ребенка. Детский сайт для родителей.</a>
+								</div>
+								<div class="parents__item">
+									<a href="https://tillionline.ru/">Персональный помощник для всестороннего развития
+										ребенка</a>
+								</div>
+								<div class="parents__item">
+									<a href="https://iqsha.ru/">Всестороннее развитие ребенка</a>
+								</div>
+							</div>
+						</div>
+						<div class="parents__links">
+							<div class="parents__box">
+								<div class="parents__text"><a href="https://umnazia.ru/" class="parents__link">Умназия</a> -
+									игровые онлайн-курсы для детей 6–13 лет, которые заложат основу успешной учёбы и дальнейшей
+									жизни.</div>
+							</div>
+							<div class="parents__box">
+								<div class="parents__text"><a href="filipoc.ru" class="parents__link">Наш Филиппок</a> -
+									детский журнал и сайт - это красочное познавательное издание для детей от 6 до 12 лет.</div>
+							</div>
+							<div class="parents__box">
+								<div class="parents__text"><a href="allforchildren.ru" class="parents__link">Все Для Детей</a> -
+									песни, загадки, поделки, стихи занимательные задачки, раскраски, игры, популярная наука - все
+									для детей.</div>
+							</div>
+							<div class="parents__box">
+								<div class="parents__text"><a href="pochemu4ka.ru" class="parents__link">ПочемуЧка</a> -
+									сайт для детей и их родителей - развивающие занятия, стенгазеты, поделки, презентации,
+									дидактические игры, методические разработки.</div>
+							</div>
+							<div class="parents__box">
+								<div class="parents__text"><a href="http://ranneerazvitie.narod.ru/almanah/"
+										class="parents__link">Альманах “Раннее развитие”</a> -
+									это сайт, развивающий прежде всего родителей. Авторские материалы “на почитать” о том, как и
+									чем заниматься с детишками, разделенные по возрасту: от 0 до 1, от 1 до 3, от 3 до 5, от 5 до
+									7.</div>
+							</div>
+							<div class="parents__box">
+								<div class="parents__text"><a
+										href="https://www.hugedomains.com/domain_profile.cfm?d=vshkolu&e=com"
+										class="parents__link">Интерактивный тест “Пора в школу”</a> -
+									под заданиями – подробные инструкции для родителей и пояснения: какие умения определяем и
+									почему они важны.</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="useful">
+				<div class="container">
+					<div class="useful__title title">
+						Полезные ссылки
+					</div>
+					<div class="useful__body">
+						<div class="useful__text"><a href="https://ippk.ru/ " class="useful__link"> ХК ИРО</a>
+						</div>
+						<div class="useful__text"><a href="https://infourok.ru/user/neyman-yana-evgenevna1"
+								class="useful__link">Инфоурок</a>
+						</div>
+						<div class="useful__text"><a href="http://internat10.edu.27.ru/" class="useful__link">КГКОУ ШИ 10</a>
+						</div>
+						<div class="useful__text"><a href="https://ok.ru/miuchitelya" class="useful__link">Сообщество
+								учителей</a>
+						</div>
+						<div class="useful__text"><a href="https://minobr.khabkrai.ru/" class="useful__link">Министерство
+								образования</a>
+						</div>
+						<div class="useful__text"><a href="https://edu.gov.ru/ " class="useful__link">Министерство
+								просвещения</a>
+						</div>
+						<div class="useful__text"><a href="https://www.maam.ru/" class="useful__link">Международный
+								образовательный портал</a>
+						</div>
+						<div class="useful__text"><a href="https://mersibo.ru/" class="useful__link">МЕРСИБО</a> -
+							интерактивные игры и пособия для детских специалистов:
+							логопедов, психологов, воспитателей и других
+						</div>
+						<div class="useful__text"><a href="https://learningapps.org/" class="useful__link">LearningApps</a> -
+							создан для поддержки обучения и преподавания с помощью небольших общедоступных интерактивных
+							модулей
+						</div>
+						<div class="useful__text"><a href="https://www.smeshariki.ru/" class="useful__link">Смешарики</a> -
+							детский сайт с онлайн игрой «Шарарам» - сайт для девочек и мальчиков, детский чат, детская
+							социальная сеть, мультфильмы о смешариках, детские игры, развлечения.
+						</div>
+						<div class="useful__text"><a href="http://doshkolnik.info/sunduk.htm" class="useful__link">Сундучок
+								дошкольника</a> -
+							в “сундучке” собраны картинки, карточки, пособия и дидактические игры, которые вы можете изготовить
+							самостоятельно.
+						</div>
+						<div class="useful__text"><a href="http://skorovchkolu.ru/" class="useful__link">Скоро в школу</a> -
+							большой выбор учебных материалов для подготовки малышей к школе. Образовательные игры, тренажеры,
+							учебные пособия и многое другое предоставлено для чтения и бесплатного скачивания.
+						</div>
+						<div class="useful__text"><a href="http://poskladam.ru/propis/index.html" class="useful__link">Прописи
+								букв русского алфавита онлайн</a> -
+							для развития навыков письма и рисования – прописи для детишек 3-4 лет, 5-6 лет и для
+							первоклассников.
+						</div>
+						<div class="useful__text"><a href="https://read-ka.cofe.ru/" class="useful__link">Журнал
+								“Почитай-ка”</a> -
+							Сказки, истории и стишки с картинками – для чтения в родительском исполнении.
+						</div>
+						<div class="useful__text"><a href="https://lukoshko.net/" class="useful__link">Лукошко</a> -
+							сказки, стихи, песенки. А еще словарик, игры и еще пол-лукошка полезностей.
+						</div>
+						<div class="useful__text"><a href="https://www.murzilka.org/" class="useful__link">Мурзилка</a> -
+							здесь написано: “Для детей от 6 до 12 лет”, но забраться сюда можно и пораньше. Это же тот самый
+							“Мурзилка”, с которым мы сами в детстве дружили! Только тогда он был еще бумажный.
+						</div>
+						<div class="useful__text"><a href="https://www.razumeykin.ru/ " class="useful__link">Разумейкин</a> -
+							онлайн-занятия для детей от 3 до 10 лет. Подготовка к школе и повышение успеваемости младших
+							школьников.
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
-	<footer class="footer">
+		<footer class="footer">
 	<div class="container">
 		<div class="footer__wrapper">
 		</div>
