--- a/diagnost.html
+++ b/diagnost.html
@@ -31,7 +31,7 @@
 			</div>
 		</header>
 		<div class="content">
-			<div class="direction">
+			<div class="direction direction_d">
 				<div class="container">
 					<div class="direction__breadcrumbs breadcrumbs">
 						<div class="breadcrumbs__link">
