--- a/index.html
+++ b/index.html
@@ -694,6 +694,45 @@
 					</div>
 				</div>
 			</div>
+			<div class="contacts">
+				<div class="container">
+					<div class="contacts__title title">Контакты</div>
+					<div class="contacts__top">
+						<div class="contacts__label">
+							Вы можете связаться со мной одним из способов:
+						</div>
+						<div class="contacts__wrapper">
+							<div class="contacts__column contacts__column_1">
+								<a href="tel:+375297611857" class="contacts__image">
+									<picture>
+										<source srcset="img/contacts/01_m.png" type="image/png" media="(max-width:550px">
+										<img src="img/contacts/01.png" alt="">
+									</picture>
+								</a>
+								<a href="tel:+79144087671" class="contacts__link">+7 914 408 76 71</a>
+							</div>
+							<div class="contacts__column contacts__column_2">
+								<a target="_blank" href="#" class="contacts__image">
+									<picture>
+										<source srcset="img/contacts/02_m.png" type="image/png" media="(max-width:550px">
+										<img src="img/contacts/02.png" alt="">
+									</picture>
+								</a>
+								<a target="_blank" href="#" class="contacts__link">Yana</a>
+							</div>
+							<div class="contacts__column contacts__column_3">
+								<a target="_blank" href="mailto:#" class="contacts__image">
+									<picture>
+										<source srcset="img/contacts/03_m.png" type="image/png" media="(max-width:550px">
+										<img src="img/contacts/03.png" alt="">
+									</picture>
+								</a>
+								<a target="_blank" href="mailto:#" class="contacts__link">yana@gmail.com</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<footer class="footer">
 	<div class="container">
@@ -704,6 +743,7 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/form.js"></script>
 </body>
 
 </html>
