--- a/index.html
+++ b/index.html
@@ -694,42 +694,60 @@
 					</div>
 				</div>
 			</div>
-			<div class="contacts">
+			<div id="contacts" class="contacts">
 				<div class="container">
-					<div class="contacts__title title">Контакты</div>
+					<div class="contacts__title title">Обратная связь</div>
 					<div class="contacts__top">
 						<div class="contacts__label">
-							Вы можете связаться со мной одним из способов:
+							Здесь Вы можете оставить свой отзыв о работе сайта, написать комментарий или пожелание,
+							что бы Вам хотелось увидеть на сайте. Мне очень важно Ваше мнение. Спасибо!
 						</div>
-						<div class="contacts__wrapper">
-							<div class="contacts__column contacts__column_1">
-								<a href="tel:+375297611857" class="contacts__image">
-									<picture>
-										<source srcset="img/contacts/01_m.png" type="image/png" media="(max-width:550px">
-										<img src="img/contacts/01.png" alt="">
-									</picture>
-								</a>
-								<a href="tel:+79144087671" class="contacts__link">+7 914 408 76 71</a>
-							</div>
-							<div class="contacts__column contacts__column_2">
-								<a target="_blank" href="#" class="contacts__image">
-									<picture>
-										<source srcset="img/contacts/02_m.png" type="image/png" media="(max-width:550px">
-										<img src="img/contacts/02.png" alt="">
-									</picture>
-								</a>
-								<a target="_blank" href="#" class="contacts__link">Yana</a>
-							</div>
-							<div class="contacts__column contacts__column_3">
-								<a target="_blank" href="mailto:#" class="contacts__image">
-									<picture>
-										<source srcset="img/contacts/03_m.png" type="image/png" media="(max-width:550px">
-										<img src="img/contacts/03.png" alt="">
-									</picture>
-								</a>
-								<a target="_blank" href="mailto:#" class="contacts__link">yana@gmail.com</a>
-							</div>
+						<div class="contacts__form form">
+							<form action="#" class="form__body">
+								<div class="form__item">
+									<div class="form__label">Была ли сайт вам полезен?</div>
+									<div class="options">
+										<div class="options__item">
+											<input id="formYes" checked type="radio" value="yes" name="like"
+												class="options__input">
+											<label for="formYes" class="options__label"><span>Да</span></label>
+										</div>
+										<div class="options__item">
+											<input id="formNo" type="radio" value="no" name="like" class="options__input">
+											<label for="formNo" class="options__label"><span>Нет</span></label>
+										</div>
+									</div>
+								</div>
+								<button type="submit" class="form__button">
+									<p>
+										Голосовать
+									</p>
+									<span></span>
+								</button>
+							</form>
 						</div>
+					</div>
+					<div class="contacts__bottom">
+						<div class="contacts__comment" id="disqus_thread"></div>
+						<script>
+							/**
+							*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+							*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+							/*
+							var disqus_config = function () {
+							this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+							this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+							};
+							*/
+							(function () { // DON'T EDIT BELOW THIS LINE
+								var d = document, s = d.createElement('script');
+								s.src = 'https://iana-balakhontseva.disqus.com/embed.js';
+								s.setAttribute('data-timestamp', +new Date());
+								(d.head || d.body).appendChild(s);
+							})();
+						</script>
+						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments
+								powered by Disqus.</a></noscript>
 					</div>
 				</div>
 			</div>
@@ -744,6 +762,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/form.js"></script>
+	<script src="js/form.js"></script>
 </body>
 
 </html>
