--- a/diagnost.html
+++ b/diagnost.html
@@ -46,12 +46,19 @@
 						<div class="direction__title title">
 							Диагностико-аналитическое направление
 						</div>
+						<div class="direction__text">
+							<span>Диагностическое направление</span> - прогнозирование возникновения трудностей при обучении,
+							определение
+							причин и механизмов уже возникших учебных проблем.
+							Аналитическое направление -проведения анализа процесса коррекционного воздействия на развитие
+							учащегося и оценку его эффективности, а также анализа и оценку взаимодействия специалистов.
+						</div>
 						<div class="direction__image">
 							<div class="direction__img">
 								<img src="img/direction/05.jpg" alt="">
 							</div>
 						</div>
-						<div class="direction__item">
+						<div class="direction__item direction__item_diagn">
 							<div class="direction__label">
 								Подробную информацию о данном направлении вы можете узнать, перейдя по <a
 									href="https://disk.yandex.ru/client/disk/%D0%94%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D0%BE-%D0%B0%D0%BD%D0%B0%D0%BB%D0%B8%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%BD%D0%B0%D0%BF%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5">ссылке</a>
