--- a/consult.html
+++ b/consult.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<title>Яна Балахонцева | Консультативно-просветительское направление</title>
 </head>
 
@@ -24,7 +24,9 @@
 							<li><a href="index.html#portfolio" class="header__link">Портфолио</a></li>
 							<li><a href="index.html#sections" class="header__link">Направления работы</a></li>
 							<li><a href="index.html#profession" class="header__link">Профессия</a></li>
-							<li><a href="index.html#contacts" class="header__link">Контакты</a></li>
+							<li><a href="index.html#parents" class="header__link">Родителям</a></li>
+							<li><a href="index.html#useful" class="header__link">Полезное</a></li>
+							<li><a href="index.html#contacts" class="header__link">Комментарии</a></li>
 						</ul>
 					</div>
 				</div>
