--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<title>Яна Балахонцева</title>
 </head>
 
@@ -641,7 +641,7 @@
 						</div>
 						<div class="useful__text"><a href="https://ippk.ru/ " class="useful__link"> ХК ИРО</a>
 						</div>
-						<div class="useful__text"><a href="http://internat10.edu.27.ru/" class="useful__link">Моя школа</a>
+						<div class="useful__text"><a href="http://internat10.edu.27.ru/" class="useful__link">КГКОУ ШИ 10</a>
 						</div>
 						<div class="useful__text"><a href="https://infourok.ru/user/neyman-yana-evgenevna1"
 								class="useful__link">Моя страница на платформе "Инфоурок"</a>
@@ -705,8 +705,7 @@
 							что бы Вам хотелось увидеть на сайте. Мне очень важно Ваше мнение. Спасибо!
 						</div>
 						<div class="contacts__form form">
-							<form enctype="multipart/form-data" onsubmit="send(event, 'smart.php')" id="form" method="post"
-								class="form__body">
+							<form id="form" method="POST" class="form__body">
 								<div class="form__item">
 									<div class="form__label">Была ли сайт вам полезен?</div>
 									<div class="options">
@@ -732,6 +731,7 @@
 					</div>
 					<div class="contacts__bottom">
 						<div class="contacts__comment" id="disqus_thread"></div>
+						<div id="disqus_thread"></div>
 						<script>
 							/**
 							*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -744,7 +744,7 @@
 							*/
 							(function () { // DON'T EDIT BELOW THIS LINE
 								var d = document, s = d.createElement('script');
-								s.src = 'https://iana-balakhontseva.disqus.com/embed.js';
+								s.src = 'https://http-defectolog-defectologbalahontseva-ru.disqus.com/embed.js';
 								s.setAttribute('data-timestamp', +new Date());
 								(d.head || d.body).appendChild(s);
 							})();
@@ -764,7 +764,7 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/main.js"></script>
-<!--<script src="js/form.js"></script>-->
+	<script src="js/form.js"></script>
 </body>
 
 </html>
